fix edit caption spacing for mobile

--- a/css/index.css
+++ b/css/index.css
@@ -812,17 +812,20 @@ body {
   .edit-caption-popup {
     flex-direction: column;
     align-items: flex-start;
+    padding: 0 20px;
   }
 
   .edit-caption-popup textarea {
     width: 100%;
     height: 72px;
     margin-right: 0;
+    margin-top: 10px;
   }
 
   .edit-caption-popup button {
+    width: auto;
     align-self: flex-end;
     margin-top: 12px;
-    margin-bottom: 4px;
+    margin-bottom: 12px;
   }
 }
